bdr.BDR.scala.error
Compilation error:
BDR:2: error: not found: value getIndication
  if(getIndication=="R"){
     ^BDR:5: error: not found: value getIndication
  } else if (getIndication=="L"){
             ^BDR:8: error: not found: value getIndication
  } else if (getIndication=="I"){
             ^BDR:9: error: not found: value U
    U-turn
    ^BDR:9: error: not found: value turn
    U-turn
      ^BDR:11: error: not found: value getIndication
  } else if (getIndication=="A"){
             ^BDR:14: error: not found: value getIndication
  }else if (getIndication=="B"){
            ^BDR:17: error: not found: value getIndication
  }else if (getIndication=="C"){
            ^BDR:22: error: not found: value getIndication
  }else if (getIndication=="Z"){
            ^BDR:24: error: not found: value getIndication
  }else if (getIndication=="Y"){
            ^BDR:26: error: not found: value bakward
    bakward()
    ^BDR:27: error: not found: value getIndication
  }else if (getIndication=="X"){
            ^